# Multi-Agent-DevOps-Gemini

./: .gitignore  README.adoc  docker-compose.yml  index.html  pyproject.toml
docker/: Dockerfile.architecture_intelligence  Dockerfile.code_execution  Dockerfile.digest  Dockerfile.health_monitor  Dockerfile.image  Dockerfile.marathon  Dockerfile.metrics_agent  Dockerfile.planner  Dockerfile.progress  Dockerfile.risks  Dockerfile.static  Dockerfile.ui
docs/: AGENT_INTERACTIONS.md
docs/diagrams/: 1.puml  architecture.puml  mcp-sequence.puml  pipeline.puml
n8n/workflows/: demo.json
src/: main.py
src/agents/architecture_intelligence/: agent.py  main.py
src/agents/code_execution/: agent.py  main.py
src/agents/digest/: agent.py  main.py
src/agents/health_monitor/: agent.py  main.py
src/agents/image/: agent.py  main.py
src/agents/marathon/: agent.py  main.py
src/agents/metrics_agent/: agent.py  main.py
src/agents/planner/: agent.py  main.py
src/agents/progress/: agent.py  main.py
src/agents/risks/: agent.py  main.py
src/shared/: cors.py  error_handler.py  jira.py  llm_client.py  mcp_base.py  metrics.py  models.py
src/shared/vision/: __init__.py  base.py  fallback.py  gemini.py
