[tool.poetry]
name = "multi-agent devops"
version = "0.1.0"
description = "Multi-agent intelligent system for DevOps automation and monitoring Gemini"
authors = ["Tatiana Hlazkina <tatiana.adlock@gmail.com>"]
license = "MIT"
readme = "README.adoc"

packages = [
    { include = "shared", from = "src" },
    { include = "agents", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic = "^2.8.0"
httpx = ">=0.28.1,<1.0.0"
google-genai = "0.3.0"
python-dotenv = "^1.0.0"
prometheus-client = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.8.0"
isort = "^5.13.0"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
